--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <title>Agri Roots</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <meta content="AgriRoots" name="keywords">
+    <meta content="AgriRoots" name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
