--- a/index.html
+++ b/index.html
@@ -497,9 +497,9 @@
                     <div class="row g-0">
                         <div class="col-10">
                             <div class="position-relative">
-                                <img class="img-fluid w-100" src="https://i.ibb.co/vzCHpcG/IMG-20250125-121243.jpg" alt="">
+                                <img class="img-fluid w-100" src="https://i.ibb.co/ZcQ6ykp/IMG-20250127-163022.jpg" alt="">
                                 <div class="position-absolute start-0 bottom-0 w-100 py-3 px-4" style="background: rgba(52, 173, 84, .85);">
-                                    <h4 class="text-white">Farmer Name</h4>
+                                    <h4 class="text-white">Rao Arsalan</h4>
                                     <span class="text-white">Designation</span>
                                 </div>
                             </div>
